configuration approfondie websocket avec handler de connexion, configuration du consumer et producer pulsar avec cle de partition